# app-polo

./: README.md  RELEASE-NOTES.json  package-lock.json  package.json
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: CMakeLists.txt  ggmorse_jni.cpp
android/app/src/main/jni/ggmorse/: ggmorse.cpp  ggmorse_jni.cpp
android/app/src/main/res/values/: strings.xml
src/extensions/: loadExtensions.js
src/extensions/activities/gma/: GMAExtension.js
src/extensions/activities/tota/: TOTAExtension.js  TOTAPostOtherSpot.js
src/extensions/contests/cqwpx/: CQWPXActivityOptions.jsx  CQWPXExtension.js
src/extensions/contests/qp/: NOTES.md  QSOPartiesExtension.js
src/extensions/contests/qp/parties/: fl.json  ga.json  id.json  la.json  mi.json  mo.json  ms.json  nc.json  nd.json  ne.json  nm.json  ns.json  ok.json  on.json  qc.json  va.json  wi.json
src/extensions/contests/simple-contest/: SimpleContestExtension.js
src/extensions/data/voice-logging/: VoiceLoggingAccount.jsx  VoiceLoggingChip.jsx  VoiceLoggingControl.jsx  VoiceLoggingExtension.js  VoiceSession.js  audio.js  cw-extractor.js  extractor.js  ggmorse.js  whisper.js
src/extensions/scoring/: index.js
src/extensions/shared/: activityScoring.js
src/i18n/resources/en/: extensions.json
src/screens/OperationBadgeScreen/: OperationBadgeScreen.jsx
src/store/qsos/: qsosSlice.js
src/tools/: callsignTools.js  callsignTools.spec.js  joinAnd.js  qsonToADIF.js  qsonToCabrillo.js  timeFormats.js
src/ui/react-native/: H2kTextInput.jsx
(+9 files in other folders)
